This is the same file with RunCukeTest.java at this moment, tring to name the runner file with meaningful  name